Fixed some normal priority warnings by FindBugs
svn changeset:13463/svn branch:6.3